resizing chat pannel

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@ function showError(error) {
 		</td>
 	</tr>
 	<tr>	
-		<td>
+		<td width="100%">
 			<div id="chat" width="100%">
 				<ul id="text" width="100%">
 
 				</ul>
 			</div>
 		</td>
-		<td>
+		<td width="100%">
 			
 		</td>
 	</tr>
