resizing chat pannel

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ function loadChat(){
 			$cont.append("<div style='display: block; width: 100%; padding:10px; float:none;'><div style='float:left;'>"+newPost.userId.replace("@gmail.com","")+ " :"+getUserProfile(newPost.userId).toString()+"<li class='btn btn-info' id="+prevChildKey+">"+newPost.text+"</li> </div><br><br></div>");
 
 		}
-		//var noti = new window.Notification(newPost.userId+" : "+newPost.text);
+		var noti = new window.Notification(newPost.userId+" : "+newPost.text);
 		
 		$cont[0].scrollTop = $cont[0].scrollHeight;
 		var num = $("div").length;
